--- a/practices/practiceB/app/index.html
+++ b/practices/practiceB/app/index.html
@@ -13,6 +13,10 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="scripts/directives/no-scope-directive/no-scope-directive.css">
+    <!-- endbuild -->
+    <!-- build:css(.tmp) styles/main2.css -->
+    <link rel="stylesheet" href="styles/test.css">
     <!-- endbuild -->
   </head>
   <body ng-app="practiceBApp">
@@ -39,9 +43,9 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li ui-sref-active="active"><a ui-sref="main">Home</a></li>
+              <li ui-sref-active="active"><a ui-sref="about">About</a></li>
+              <li ui-sref-active="active"><a ng-href="#/4">404</a></li>
             </ul>
           </div>
         </div>
@@ -89,6 +93,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/no-scope-directive/no-scope-directive.js"></script>
         <!-- endbuild -->
 </body>
 </html>
