Add directives practice

--- a/practices/practiceB/app/scripts/directives/no-scope-directive/no-scope-directive.html
+++ b/practices/practiceB/app/scripts/directives/no-scope-directive/no-scope-directive.html
@@ -1,3 +1,4 @@
 <div class="no-scope-directive">
-  <input type="text" model="directiveValue" placeholder="no scope directive">
+  <h5>child noScopeDirectiveValue: {{noScopeDirectiveValue}}</h5>
+  <input type="text" ng-model="noScopeDirectiveValue" placeholder="no scope directive">
 </div>
