--- a/practices/practiceB/app/index.html
+++ b/practices/practiceB/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Tests</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -14,6 +14,9 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="scripts/directives/no-scope-directive/no-scope-directive.css">
+    <link rel="stylesheet" href="scripts/directives/with-scope-directive/with-scope-directive.css">
+    <link rel="stylesheet" href="scripts/directives/isolated-scope-directive/isolated-scope-directive.css">
+    <link rel="stylesheet" href="scripts/modules/module-no-scope-directive/module-no-scope-directive.css">
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main2.css -->
     <link rel="stylesheet" href="styles/test.css">
@@ -62,18 +65,6 @@
       </div>
     </div>
 
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -90,10 +81,13 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/modules/module-no-scope-directive/module-no-scope-directive.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/directives/no-scope-directive/no-scope-directive.js"></script>
+        <script src="scripts/directives/with-scope-directive/with-scope-directive.js"></script>
+        <script src="scripts/directives/isolated-scope-directive/isolated-scope-directive.js"></script>
         <!-- endbuild -->
 </body>
 </html>
