Add Services practice

--- a/practices/practiceB/app/index.html
+++ b/practices/practiceB/app/index.html
@@ -88,6 +88,8 @@
         <script src="scripts/directives/no-scope-directive/no-scope-directive.js"></script>
         <script src="scripts/directives/with-scope-directive/with-scope-directive.js"></script>
         <script src="scripts/directives/isolated-scope-directive/isolated-scope-directive.js"></script>
+        <script src="scripts/services/taxesFactory.js"></script>
+        <script src="scripts/services/apiService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
