--- a/practices/practiceB/app/scripts/directives/isolated-scope-directive/isolated-scope-directive.html
+++ b/practices/practiceB/app/scripts/directives/isolated-scope-directive/isolated-scope-directive.html
@@ -1,4 +1,5 @@
 <div class="isolated-scope-directive">
   <h5>child isolatedScopeDirectiveValue: {{isolatedScopeDirectiveValue}}</h5>
   <input type="text" ng-model="isolatedScopeDirectiveValue" placeholder="isolated scope directive">
+  <button class="btn btn-primary" ng-click="sendValue()">Send isolatedScopeDirectiveValue</button>
 </div>
